fix: fixed horizontal scroll on mobile devices

--- a/momentum/src/assets/scss/mixins.scss
+++ b/momentum/src/assets/scss/mixins.scss
@@ -26,7 +26,7 @@
   transition: all $transition-default;
 
   &:hover {
-    opacity: .5;
+    opacity: .75;
     text-decoration: underline;
   }
 
@@ -98,6 +98,12 @@
 
 @mixin media-md {
   @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin media-xl {
+  @media screen and (max-width: 1140px) {
     @content;
   }
 }
