--- a/momentum/src/style.scss
+++ b/momentum/src/style.scss
@@ -85,11 +85,15 @@ body {
       overflow-y: auto;
       width: 85%;
       height: 810px;
-      padding: 1rem 0;
+      max-height: 100%;
+      padding: 1rem .5rem;
 
       @include media-sm {
-        width: 100%;
         height: 766px;
+      }
+
+      @include media-xl {
+        width: 100%;
       }
     }
 
